--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,8 @@ spring.application.name=zuul-api-gateway
 server.port=8080
 
 eureka.client.register-with-eureka=false
-eureka.client.serviceUrl.defaultZone = http://localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone = https://jordan-discovery-server.herokuapp.com/eureka
+#http://localhost:8761/eureka
 eureka.client.fetch-registry=true
 
 zuul.ignored-headers: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
