--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,22 +1,29 @@
 spring.application.name=zuul-api-gateway
 server.port=8080
 
-eureka.client.register-with-eureka=false
+eureka.client.register-with-eureka=true
 eureka.client.serviceUrl.defaultZone = https://jordan-discovery-server.herokuapp.com/eureka
 #http://localhost:8761/eureka
 eureka.client.fetch-registry=true
 
 zuul.ignored-headers: Access-Control-Allow-Credentials, Access-Control-Allow-Origin
 
+ribbon.eager-load.enabled=true
+ribbon.restclient.enabled=true
+# Actuator
+management.endpoints.web.exposure.include=health,routes
+zuul.host.connect-timeout-millis=10000
+zuul.host.socket-timeout-millis=60000
+
 #ROUTING FOR PRODUCT SERVICE
 zuul.routes.productservice.path = /product-service/**
-zuul.routes.productservice.serviceId=product-service
+zuul.routes.productservice.url=https://jordan-product-service.herokuapp.com/
 
 #ROUTING FOR ACCOUNT SERVICE
 zuul.routes.accountservice.path = /account-service/**
-zuul.routes.accountservice.serviceId=account-service
+zuul.routes.accountservice.url=https://jordan-account-service.herokuapp.com/
 zuul.routes.accountservice.sensitive-headers=Cookie,Set-Cookie
 
 #ROUTING FOR ORDER SERVICE
 zuul.routes.orderservice.path = /order-service/**
-zuul.routes.orderservice.serviceId=order-service
+zuul.routes.orderservice.url=https://jordan-order-service.herokuapp.com/
